<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DashBoardActivity">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_marginTop="40dp"
        android:textSize="25dp"
        android:textColor="@color/unselected_button_color"
        android:fontFamily="@font/accordalternateextrabold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
      />

    <TextView
        android:id="@+id/pan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pan_number"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/unselected_button_color"
        android:fontFamily="@font/accordalternatemedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"/>

    <TextView
        android:id="@+id/pan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AFSGH123FG"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/accordalternatemedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pan_text" />

    <TextView
        android:id="@+id/birth_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdate"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/unselected_button_color"
        android:fontFamily="@font/accordalternatemedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pan"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AFSGH123FG"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/accordalternatemedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_text" />
</androidx.constraintlayout.widget.ConstraintLayout>